<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="personalInforamtion"
            type="com.example.mypraticeapplication.viewmodel.verificationDetail.RCUVerificationViewModel"  />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.mypraticeapplication.widget.HeaderText
            android:id="@+id/applicant_PersonalInformation_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/applicant_PersonalInformation_label"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp">
        </com.example.mypraticeapplication.widget.HeaderText>

        <LinearLayout
            android:id="@+id/ll_PersonalInforamtionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.example.mypraticeapplication.widget.SmallText
                android:id="@+id/applicant_HouseLocality_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicant_HouseLocality_label"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp">
            </com.example.mypraticeapplication.widget.SmallText>

            <com.example.mypraticeapplication.widget.searchablespinner.SearchableSpinner
                android:id="@+id/spnHouseLocality"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:background="@drawable/bg_spinner"
                app:custom_font="@string/app_font_regular"
                android:entries="@array/neighbourrecognised_array"
                app:setOnItemSelectedListener="@{personalInforamtion.clicksHouseLocalityListener}"
                android:imeOptions="actionNext"
                android:selectedItemPosition="@{personalInforamtion.selectedHouseLocalityItemPosition}"
                android:textSize="@dimen/verificationDetailTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_NeibourRecognised"
                tools:ignore="MissingConstraints" />


            <com.example.mypraticeapplication.widget.SmallText
                android:id="@+id/applicant_AccommodationType_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicant_AccommodationType_label"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp">
            </com.example.mypraticeapplication.widget.SmallText>

            <com.example.mypraticeapplication.widget.searchablespinner.SearchableSpinner
                android:id="@+id/spnAccommodationType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:background="@drawable/bg_spinner"
                app:custom_font="@string/app_font_regular"
                android:entries="@array/neighbourrecognised_array"
                app:setOnItemSelectedListener="@{personalInforamtion.clicksAccommodationTypeListener}"
                android:imeOptions="actionNext"
                android:selectedItemPosition="@{personalInforamtion.selectedHouseLocalityItemPosition}"
                android:textSize="@dimen/verificationDetailTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_NeibourRecognised"
                tools:ignore="MissingConstraints" />
            <com.example.mypraticeapplication.widget.SmallText
                android:id="@+id/applicant_IsNameboardseenattheHouse_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicant_IsNameboardseenattheHouse_label"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp">
            </com.example.mypraticeapplication.widget.SmallText>
            <RadioGroup
                android:id="@+id/rb_applicant_IsNameboardseenattheHouse_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{personalInforamtion.onAddressConfirmed}"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/rb_IsNameboardseenattheHouseYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/RadioButton"
                    android:text="@string/radio_Yes"/>
                <RadioButton android:id="@+id/rb_IsNameboardseenattheHouseNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/RadioButton"
                    android:text="@string/radio_No"/>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/ll_NameboardMismatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.example.mypraticeapplication.widget.SmallText
                    android:id="@+id/applicant_IsNameboardmismatched_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/applicant_IsNameboardmismatched_label"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp">
                </com.example.mypraticeapplication.widget.SmallText>
                <RadioGroup
                    android:id="@+id/rb_IsNameboardseenattheHouse_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{personalInforamtion.onAddressConfirmed}"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/rb_applicant_IsNameboardseenattheHouse_labelYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/RadioButton"
                        android:text="@string/radio_Yes"/>
                    <RadioButton android:id="@+id/rb_applicant_IsNameboardseenattheHouse_labeleNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/RadioButton"
                        android:text="@string/radio_No"/>
                </RadioGroup>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inpApplicant_Reason_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayout"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:hintTextColor="@color/main_bg"
                    app:passwordToggleEnabled="false"
                    android:layout_weight="1"
                    tools:ignore="MissingClass,MissingConstraints">

                    <com.example.mypraticeapplication.widget.TypefaceEditText
                        android:id="@+id/edt_Applicant_Reason_label"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_size"
                        android:hint="@string/applicant_relation_label"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={personalInforamtion.edt_Reason}"
                        android:textColor="@color/gray_323232"
                        android:textColorHint="@color/gray_323232"
                        android:textSize="@dimen/verificationDetailTextSize"
                        app:custom_font="@string/app_font_regular" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>